fix(css): increase shown header dropdown menu z-index

--- a/src/rocm_docs/rocm_docs_theme/static/rocm_header.css
+++ b/src/rocm_docs/rocm_docs_theme/static/rocm_header.css
@@ -101,6 +101,7 @@ header.common-header .navbar.second-level-nav .header-nav-dropdown-toggle::after
   }
   header.common-header .navbar.second-level-nav .nav-item.dropdown .header-nav-dropdown-menu.show {
     display: block;
+    z-index: 2001;
   }
   header.common-header .navbar.second-level-nav .header-nav-dropdown-menu .dropdown-item {
     display: block;
